# fulfillment-service

./: .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  AGENTS.md  Containerfile  Makefile  OWNERS  README.md  buf.gen.python.yaml  buf.gen.yaml  buf.yaml  dev.py  go.mod  go.sum  main.go
.ai-bot.preserve/: config.yaml  feedback-workflow.md  instructions.md  new-ticket-workflow.md
.claude/: settings.json
.copr/: .gitignore  Makefile  fulfillment-cli.spec.in  srpm.sh
.github/: dependabot.yml
.planning/: protovalidate-migration-plan.md
charts/: README.md
dev/: README.md  __init__.py  build.py  commands.py  dirs.py  formatter.py  lint.py  setup.py  tools.py  update.py
docs/: API.md  AUTH.md  CAAS.md  CATALOG_ITEMS.md  FILTER.md  INSTALL.md  OPENAPI.md
internal/: context_test.go  tool.go
it/: Containerfile  it_access_test.go  it_annotations_test.go  it_baremetal_instance_lifecycle_test.go  it_builtin_tenants_test.go  it_catalog_items_test.go  it_cli_auth_test.go  it_cli_errors_test.go  it_cli_file_create_test.go  it_cli_get_subcommands_test.go  it_cli_helpers.go  it_cli_lifecycle_test.go  it_cli_metadata_test.go  it_cli_output_test.go  it_cli_tenant_isolation_test.go  it_cli_tenant_test.go  it_cli_whoami_test.go  it_cluster_reconciler_test.go  it_compute_subnet_test.go  it_emergency_access_test.go  it_labels_test.go  it_metadata.go  it_multitenancy_test.go  it_nodeset_removal_test.go  it_organization_lifecycle_test.go  it_organization_reconciler_test.go  (+20 more)
mock/: Containerfile  README.md  auth.py  events.py  filter_parser.py  handlers.py  mock_server.py  openapi_loader.py  pyproject.toml  state_machines.py  store.py
mock/scenarios/: default.yaml
python/: pyproject.toml
(+1840 files in other folders)
